application-avec-ingress-et-cnfigmap/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configurable-app
  namespace: projet-debutant

spec:
  replicas: 3
  selector:
    matchLabels:
      app: configurable-app
  template:
    metadata:
      labels:
        app: configurable-app
    spec:
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/conf.d
      
      volumes:
        - name: config-volume
          configMap:
            name: app-config
            items:
              - key: log.level
                path: nginx-log-level.conf

---
apiVersion: v1
kind: Service
metadata:
  name: configurable-app-service
  namespace: projet-debutant
spec:
  selector:
    app: configurable-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
